[package]
name = "latency"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.5.1"
tokio = { version = "1.19.2", features = ["full"] }
bytes = "1.1.0"
log = "0.4"
env_logger = "0.9.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_System_Performance"
]